--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,11 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'site/package-lock.json'
 
       - name: Install dependencies
         run: |
           cd site
-          npm ci
+          npm install
 
       - name: Build project
         run: |
