--- a/site/package.json
+++ b/site/package.json
@@ -37,7 +37,7 @@
     "@cloudflare/workers-types": "^4.20250124.3",
     "@opennextjs/cloudflare": "^1.3.0",
     "@types/node": "^20.19.13",
-    "@types/react": "^19.0.8",
+    "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
