--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy to Cloudflare Pages
         run: |
           cd site
-          npx wrangler pages deploy out --project-name=deanvz-com --compatibility-date=2023-05-18
+          npx wrangler pages deploy out --project-name=deanvz-com
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
