Update project name to deanvz.com and configure wrangler for Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy to Cloudflare Pages
         run: |
           cd site
-          npx wrangler pages deploy out --project-name=deanvz-com
+          npx wrangler pages deploy out --project-name="deanvz.com" --commit-dirty=true
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
