--- a/site/wrangler.jsonc
+++ b/site/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "deanvz.com",
+  "name": "deanvz-com",
   "pages_build_output_dir": "./out",
   "compatibility_date": "2024-09-26",
   "compatibility_flags": ["nodejs_compat"]
