--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           cd site
           npm run build
+        env:
+          NEXT_PUBLIC_GA_TRACKING_ID: G-CMJEE5HDYY
 
       - name: Deploy to Cloudflare Pages
         run: |
