--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/env": "^15.1.7",
     "@next/mdx": "^15.1.6",
+    "@next/third-parties": "^15.5.2",
     "@swc/helpers": "^0.5.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
