--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           cd site
           npm run build
         env:
-          NEXT_PUBLIC_GA_TRACKING_ID: G-CMJEE5HDYY
+          NEXT_PUBLIC_GA_TRACKING_ID: ${{ secrets.NEXT_PUBLIC_GA_TRACKING_ID }}
 
       - name: Deploy to Cloudflare Pages
         run: |
